--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: pomo
-description: "Task managment made easy."
+description: "Task management made easy."
 
 publish_to: 'none'
 
@@ -16,6 +16,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   flutter_essentials_kit: ^2.5.0
   freezed_annotation: ^2.4.1
+  pretty_dio_logger: ^1.3.1
   intl: ^0.18.1
   json_annotation: ^4.8.1
   pine: ^1.0.3
@@ -32,6 +33,7 @@ dependencies:
   flutter_onboarding_slider: ^1.0.11
   shared_preferences: ^2.2.2
   logger: ^2.0.2+1
+
   permission_handler: ^11.2.0
   auto_route: ^7.8.4
   auto_route_generator: ^7.3.2
@@ -40,6 +42,10 @@ dependencies:
   syncfusion_flutter_datepicker: ^24.2.4
   mason: ^0.1.0-dev.52
   bloc: ^8.1.3
+  flutter_secure_storage: ^9.0.0
+  path_provider: ^2.1.2
+  hydrated_bloc: ^9.1.4
+  hive: ^2.2.3
 
 dev_dependencies:
   flutter_test:
