--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   path_provider: ^2.1.2
   hydrated_bloc: ^9.1.4
   hive: ^2.2.3
+  circular_countdown_timer: ^0.2.3
 
 dev_dependencies:
   flutter_test:
