--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,9 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Generated sources
+**/*.g.dart
+**/*.gr.dart
+**/*.freezed.dart
+**/*.mocks.dart
