--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   circular_countdown_timer: ^0.2.3
   email_validator: ^2.1.17
   dio: ^5.4.1
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
