--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   email_validator: ^2.1.17
   dio: ^5.4.1
   image_picker: ^1.0.7
+  confetti: ^0.7.0
 
 dev_dependencies:
   flutter_test:
