stats page, stats charts, edit profile page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   numberpicker: ^2.1.2
   skeletonizer: ^1.1.0
   flutter_slidable: ^3.0.1
+  fl_chart: ^0.66.2
 
 dev_dependencies:
   flutter_test:
