--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   skeletonizer: ^1.1.0
   flutter_slidable: ^3.0.1
   fl_chart: ^0.66.2
+  flutter_local_notifications: ^17.0.0
 
 dev_dependencies:
   flutter_test:
