--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   
   bloc: ^8.1.3
   flutter_secure_storage: ^9.0.0
-  path_provider: ^2.1.2
+  path_provider: ^2.1.4
   hydrated_bloc: ^9.1.4
   hive: ^2.2.3
   circular_countdown_timer: ^0.2.3
@@ -63,6 +63,10 @@ dependencies:
   cached_network_image: ^3.3.1
   pin_code_fields: ^8.0.1
   flutter_otp_text_field: ^1.1.3+2
+  reactive_forms: ^17.0.1
+  dio_cookie_manager: ^3.1.1
+  cookie_jar: ^4.0.8
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
