--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,11 @@ dependencies:
   shared_preferences: ^2.2.2
   logger: ^2.0.2+1
   permission_handler: ^11.2.0
-  auto_route: ^7.8.4
-  auto_route_generator: ^7.3.2
+  auto_route: ^9.2.2
+  auto_route_generator: ^9.0.0
   flutter_native_splash: ^2.3.10
   dotted_border: ^2.1.0
-  syncfusion_flutter_datepicker: ^24.2.4
+  syncfusion_flutter_datepicker: ^26.2.11
   
   
   bloc: ^8.1.3
@@ -47,15 +47,15 @@ dependencies:
   hydrated_bloc: ^9.1.4
   hive: ^2.2.3
   circular_countdown_timer: ^0.2.3
-  email_validator: ^2.1.17
+  email_validator: ^3.0.0
   dio: ^5.4.1
   image_picker: ^1.0.7
   confetti: ^0.7.0
   equatable: ^2.0.5
   numberpicker: ^2.1.2
-  skeletonizer: ^1.1.0
+  skeletonizer: ^1.4.2
   flutter_slidable: ^3.0.1
-  fl_chart: ^0.66.2
+  fl_chart: ^0.69.0
   flutter_local_notifications: ^17.0.0
   jwt_decoder: ^2.0.1
   flutter_cache_manager: ^3.3.1
@@ -67,12 +67,15 @@ dependencies:
   dio_cookie_manager: ^3.1.1
   cookie_jar: ^4.0.8
   path: ^1.9.0
+  slang: ^3.31.1
+  slang_flutter: ^3.31.0
+  flutter_localization: ^0.2.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^3.0.1
+  flutter_lints: ^4.0.0
   bloc_test: ^9.1.5
   build_runner: ^2.4.8
   data_fixture_dart: ^2.2.0
