feat:schedule calendar, refactoring

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   google_sign_in: ^6.2.1
   sign_in_with_apple: ^6.1.2
   audioplayers: ^6.1.0
+  table_calendar: ^3.1.2
   
 
 dev_dependencies:
