--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   sign_in_with_apple: ^6.1.2
   audioplayers: ^6.1.0
   table_calendar: ^3.1.2
+  share_plus: ^10.0.2
   
 
 dev_dependencies:
