--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,8 @@ dependencies:
   share_plus: ^10.0.2
   pinput: ^5.0.0
   url_launcher: ^6.3.0
+  android_intent_plus: ^5.1.0
+  timezone: ^0.9.4
   
 
 dev_dependencies:
