--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: pomo
-description: "Task management made easy."
+description: "Your Pomodoro Buddy."
 
 publish_to: 'none'
 
@@ -14,21 +14,14 @@ dependencies:
     sdk: flutter
 
   flutter_bloc: ^8.1.3
-  flutter_essentials_kit: ^2.5.0
   freezed_annotation: ^2.4.1
   pretty_dio_logger: ^1.3.1
   intl: ^0.19.0
-  json_annotation: ^4.8.1
   pine: ^1.0.3
   retrofit: ^4.1.0
-  talker: ^4.0.1
-  talker_bloc_logger: ^4.0.1
-  talker_dio_logger: ^4.0.1
   flutter_svg: ^2.0.9
   google_fonts: ^6.1.0
   provider: ^6.1.1
-  animated_splash_screen: ^1.3.0
-  tap_debouncer: ^2.2.0
   flutter_onboarding_slider: ^1.0.11
   shared_preferences: ^2.2.2
   logger: ^2.0.2+1
@@ -54,7 +47,6 @@ dependencies:
   flutter_cache_manager: ^3.3.1
   shimmer: ^3.0.0
   cached_network_image: ^3.3.1
-  pin_code_fields: ^8.0.1
   flutter_otp_text_field: ^1.1.3+2
   dio_cookie_manager: ^3.1.1
   cookie_jar: ^4.0.8
@@ -66,7 +58,6 @@ dependencies:
   sign_in_with_apple: ^6.1.2
   audioplayers: ^6.1.0
   table_calendar: ^3.1.2
-  share_plus: ^10.0.2
   pinput: ^5.0.0
   url_launcher: ^6.3.0
   android_intent_plus: ^5.1.0
@@ -77,7 +68,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
   bloc_test: ^9.1.5
   build_runner: ^2.4.8
   data_fixture_dart: ^2.2.0
@@ -85,7 +76,7 @@ dev_dependencies:
   http_mock_adapter: ^0.6.1
   json_serializable: ^6.7.1
   mockito: ^5.4.4
-  retrofit_generator: ^8.1.0
+  retrofit_generator: ^9.1.2
 
 
 flutter:
