--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,19 +31,19 @@ dependencies:
   flutter_native_splash: ^2.3.10
   dotted_border: ^2.1.0
   bloc: ^8.1.3
-  flutter_secure_storage: ^9.0.0
+  flutter_secure_storage: ^10.0.0-beta.2
   path_provider: ^2.1.4
   hydrated_bloc: ^9.1.4
   hive: ^2.2.3
   email_validator: ^3.0.0
   dio: ^5.4.1
   image_picker: ^1.0.7
-  confetti: ^0.7.0
+  confetti: ^0.8.0
   numberpicker: ^2.1.2
   skeletonizer: ^1.4.2
   flutter_slidable: ^3.0.1
-  fl_chart: ^0.69.0
-  flutter_local_notifications: ^17.0.0
+  fl_chart: ^0.70.1
+  flutter_local_notifications: ^18.0.1
   flutter_cache_manager: ^3.3.1
   shimmer: ^3.0.0
   cached_network_image: ^3.3.1
@@ -51,9 +51,9 @@ dependencies:
   dio_cookie_manager: ^3.1.1
   cookie_jar: ^4.0.8
   path: ^1.9.0
-  slang: ^3.31.1
-  slang_flutter: ^3.31.0
-  flutter_localization: ^0.2.2
+  slang: ^4.4.1
+  slang_flutter: ^4.4.0
+  flutter_localization: ^0.3.1
   google_sign_in: ^6.2.1
   sign_in_with_apple: ^6.1.2
   audioplayers: ^6.1.0
@@ -61,7 +61,7 @@ dependencies:
   pinput: ^5.0.0
   url_launcher: ^6.3.0
   android_intent_plus: ^5.1.0
-  timezone: ^0.9.4
+  timezone: ^0.10.0
   
 
 dev_dependencies:
@@ -72,7 +72,7 @@ dev_dependencies:
   bloc_test: ^9.1.5
   build_runner: ^2.4.8
   data_fixture_dart: ^2.2.0
-  freezed: ^2.4.7
+  freezed: ^3.0.0-0.0.dev
   http_mock_adapter: ^0.6.1
   json_serializable: ^6.7.1
   mockito: ^5.4.4
