--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,8 +13,8 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_bloc: ^8.1.3
-  freezed_annotation: ^2.4.1
+  flutter_bloc: ^9.1.1
+  freezed_annotation: ^3.0.0
   pretty_dio_logger: ^1.3.1
   intl: ^0.19.0
   pine: ^1.0.3
@@ -25,15 +25,15 @@ dependencies:
   flutter_onboarding_slider: ^1.0.11
   shared_preferences: ^2.2.2
   logger: ^2.0.2+1
-  permission_handler: ^11.2.0
-  auto_route: ^9.2.2
-  auto_route_generator: ^9.0.0
+  permission_handler: ^12.0.0+1
+  auto_route: ^10.1.0+1
+  auto_route_generator: ^10.1.0
   flutter_native_splash: ^2.3.10
   dotted_border: ^2.1.0
-  bloc: ^8.1.3
+  bloc: ^9.0.0
   flutter_secure_storage: ^10.0.0-beta.2
   path_provider: ^2.1.4
-  hydrated_bloc: ^9.1.4
+  hydrated_bloc: ^10.0.0
   hive: ^2.2.3
   email_validator: ^3.0.0
   dio: ^5.4.1
@@ -41,9 +41,9 @@ dependencies:
   confetti: ^0.8.0
   numberpicker: ^2.1.2
   skeletonizer: ^1.4.2
-  flutter_slidable: ^3.0.1
-  fl_chart: ^0.70.1
-  flutter_local_notifications: ^18.0.1
+  flutter_slidable: ^4.0.0
+  fl_chart: ^1.0.0
+  flutter_local_notifications: ^19.2.1
   flutter_cache_manager: ^3.3.1
   shimmer: ^3.0.0
   cached_network_image: ^3.3.1
@@ -55,7 +55,7 @@ dependencies:
   slang_flutter: ^4.4.0
   flutter_localization: ^0.3.1
   google_sign_in: ^6.2.1
-  sign_in_with_apple: ^6.1.2
+  sign_in_with_apple: ^7.0.1
   audioplayers: ^6.1.0
   table_calendar: ^3.1.2
   pinput: ^5.0.0
@@ -69,9 +69,9 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^5.0.0
-  bloc_test: ^9.1.5
+  bloc_test: ^10.0.0
   build_runner: ^2.4.8
-  data_fixture_dart: ^2.2.0
+  data_fixture_dart: ^3.0.0
   freezed: ^3.0.0-0.0.dev
   http_mock_adapter: ^0.6.1
   json_serializable: ^6.7.1
