--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,12 @@
 name: pomo
 description: "Your Pomodoro Buddy."
 
-publish_to: 'none'
+publish_to: "none"
 
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.2.5 <4.0.0'
-
+  sdk: ">=3.2.5 <4.0.0"
 
 dependencies:
   flutter:
@@ -16,7 +15,7 @@ dependencies:
   flutter_bloc: ^9.1.1
   freezed_annotation: ^3.0.0
   pretty_dio_logger: ^1.3.1
-  intl: ^0.19.0
+  intl: ^0.20.2
   pine: ^1.0.3
   retrofit: ^4.1.0
   flutter_svg: ^2.0.9
@@ -29,7 +28,7 @@ dependencies:
   auto_route: ^10.1.0+1
   auto_route_generator: ^10.1.0
   flutter_native_splash: ^2.3.10
-  dotted_border: ^2.1.0
+  dotted_border: ^3.1.0
   bloc: ^9.0.0
   flutter_secure_storage: ^10.0.0-beta.2
   path_provider: ^2.1.4
@@ -40,10 +39,9 @@ dependencies:
   image_picker: ^1.0.7
   confetti: ^0.8.0
   numberpicker: ^2.1.2
-  skeletonizer: ^1.4.2
+  skeletonizer: ^2.1.0+1
   flutter_slidable: ^4.0.0
   fl_chart: ^1.0.0
-  flutter_local_notifications: ^19.2.1
   flutter_cache_manager: ^3.3.1
   shimmer: ^3.0.0
   cached_network_image: ^3.3.1
@@ -54,21 +52,22 @@ dependencies:
   slang: ^4.4.1
   slang_flutter: ^4.4.0
   flutter_localization: ^0.3.1
-  google_sign_in: ^6.2.1
+  google_sign_in: ^7.2.0
   sign_in_with_apple: ^7.0.1
   audioplayers: ^6.1.0
   table_calendar: ^3.1.2
   pinput: ^5.0.0
   url_launcher: ^6.3.0
-  android_intent_plus: ^5.1.0
+  android_intent_plus: ^6.0.0
   timezone: ^0.10.0
-  
+  supabase_flutter: ^2.10.3
+  flex_color_scheme: ^8.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
   bloc_test: ^10.0.0
   build_runner: ^2.4.8
   data_fixture_dart: ^3.0.0
@@ -76,11 +75,9 @@ dev_dependencies:
   http_mock_adapter: ^0.6.1
   json_serializable: ^6.7.1
   mockito: ^5.4.4
-  retrofit_generator: ^9.1.2
-
+  retrofit_generator: ^10.0.6
 
 flutter:
-
   uses-material-design: true
 
   assets:
@@ -89,4 +86,3 @@ flutter:
     - assets/sounds/
     - assets/icons/nav-bar/Bold/
     - assets/icons/nav-bar/Light/
-
