--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   timezone: ^0.10.0
   supabase_flutter: ^2.10.3
   flex_color_scheme: ^8.3.0
+  toastification: ^3.0.3
 
 dev_dependencies:
   flutter_test:
